# spec-kit

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/scripts/: create-github-release.sh  create-release-packages.sh
scripts/bash/: update-agent-context.sh
scripts/powershell/: update-agent-context.ps1
src/specify_cli/: __init__.py
